--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -87,4 +87,4 @@
       color: $text-color
       text-align: justify
       z-index: 1
-      overflow: scroll
+      overflow-y: auto
